--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -207,5 +207,7 @@
   "event_sale": "成交",
   "event_transfer": "转移",
   "auction_ends_in": "拍卖结束时间",
-  "floor price": "地板价"
+  "floor price": "地板价",
+  "designated sale": "指定买家购买",
+  "target address": "指定买家地址"
 }
