--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -210,5 +210,6 @@
   "floor price": "Floor Price",
   "designated sale": "Designated Sale",
   "target address": "Target Address",
-  "operation fee": "Operation Fee"
+  "operation fee": "Operation Fee",
+  "approve_NewMall_for_sale": "Approve NewMall For Sale"
 }
