fix bug for approving

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -211,5 +211,6 @@
   "designated sale": "Designated Sale",
   "target address": "Target Address",
   "operation fee": "Operation Fee",
-  "approve_NewMall_for_sale": "Approve NewMall For Sale"
+  "approve_NewMall_for_sale": "Approve NewMall For Sale",
+  "approving": "approving..."
 }
