--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -211,5 +211,6 @@
   "designated sale": "指定买家购买",
   "target address": "指定买家地址",
   "operation fee": "运营费",
-  "approve_NewMall_for_sale": "授权给NewMall销售"
+  "approve_NewMall_for_sale": "授权给NewMall销售",
+  "approving": "授权中..."
 }
