add auction filter

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -212,5 +212,6 @@
   "target address": "Target Address",
   "operation fee": "Operation Fee",
   "approve_NewMall_for_sale": "Approve NewMall For Sale",
-  "approving": "approving..."
+  "approving": "approving...",
+  "can claim": "Can Claim"
 }
