update Home Page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,18 +1,21 @@
 {
   ": ": ": ",
-  "Auction": "Auction",
-  "FixedPrice": "Fixed Price",
-  "SaleMode": "Sale Mode",
   "about": "About",
   "action": "Action",
   "all": "All",
+  "Andromeda": "Andromeda",
+  "approve": "Approve",
+  "approve_NewMall_for_sale": "Approve NewMall For Sale",
+  "approving": "approving...",
   "auction": "Auction",
+  "Auction": "Auction",
   "auction canceled": "Auction Canceled",
   "auction ended": "Auction Ended",
   "auction ends in": "Auction ends in",
   "auction is over": "Auction is over",
   "auction pending": "Auction Pending",
   "auction starts in": "Auction starts in",
+  "auction_ends_in": "Auction ends in",
   "auctions": "Auctions",
   "banners": {
     "h1": "NewMall.io is on NewChain Testnet",
@@ -20,15 +23,18 @@
   },
   "basic description": "This basic info for NFT. All fields are required.",
   "basic info": "Basic Info",
+  "bid price history": "Bid Price History",
   "bidding history": "Bidding History",
   "bids": "Bids",
   "blocks": "blocks",
   "browse": "Browse",
   "buy now": "Buy Now",
   "buy now description": "Buy this item",
+  "can claim": "Can Claim",
   "cancel": "Cancel",
   "cancel auction": "Cancel Auction",
   "cancel auction description": "You are about to remove this item from auction listing",
+  "cancel_auction_tip": "You can't cancel auction once it's started.",
   "canceled": "Canceled",
   "change to auction": "Change To Auction",
   "change to sale": "Change To Sale",
@@ -49,13 +55,26 @@
   "deal transaction": "Deal Transaction",
   "default contract description": "This item will be created to NewMall Collection. This collection uses NRC-7.",
   "description": "Description",
+  "designated sale": "Designated Sale",
+  "dutch auction": "Dutch Auction",
   "end time": "End time",
   "ended": "Ended",
   "ended on s1": "{{s1}}",
   "ends": "ends",
   "ends in s1": "ends {{s1}}",
+  "english auction": "English Auction",
+  "event_ask": "Ask",
+  "event_bid": "Bid",
+  "event_burn": "Burn",
+  "event_cancel": "Cancel",
+  "event_minted": "Minted",
+  "event_offer": "Offer",
+  "event_sale": "Sale",
+  "event_transfer": "Transfer",
   "filter": "Filter",
   "fixed price sale": "Sale (Fixed Price)",
+  "FixedPrice": "Fixed Price",
+  "floor price": "Floor Price",
   "for bidding price": "For bidding price",
   "for description": "Write description for this NFT.",
   "for royalty receiving address": "Set the address to receive Royalty Fee. This cannot be changed after creation.",
@@ -69,10 +88,16 @@
   "highest bid": "Highest bid",
   "highest price": "Highest Price",
   "home": "Home",
+  "home page": {
+    "browse market": "Browse Market",
+    "feature title": "Featured: Newton Collections",
+    "hero desc": "Start trading NFT freely with NewMall Marketplace",
+    "hero title": "Create & Sell NFTs"
+  },
   "hot": "Hot",
   "in auction": "In Auction",
-  "include royalty fee": "Include Royalty Fee",
   "include protocol fee": "Include protocol fee",
+  "include royalty fee": "Include Royalty Fee",
   "input a valid address": "Input a valid address",
   "invalid bid amount": "Invalid Bid Amount",
   "invalid end time": "Invalid End Time",
@@ -112,6 +137,7 @@
   "no records": "No Records",
   "not for sale": "Not for sale",
   "oldest created": "Oldest Created",
+  "operation fee": "Operation Fee",
   "order by": "Order By",
   "owner": "Owner",
   "page title": {
@@ -128,6 +154,7 @@
   "pending withdrawal": "Pending Withdrawal",
   "price": "Price",
   "price history": "Price History",
+  "protocol fee": "protocol fee",
   "put off sale": "Put Off Sale",
   "put off sale description": "Stop selling this item?",
   "put on sale": "Put On Sale",
@@ -150,8 +177,10 @@
   "royalty receiving address": "Royalty Receiving Address",
   "s1 bids": "{{s1}} bids",
   "s1 buys": "{{s1}} buys",
+  "SaleMode": "Sale Mode",
   "seller will receive": "Seller will receive",
-  "protocol fee": "protocol fee",
+  "start dutch auction": "Start Dutch Auction",
+  "start english auction": "Start English Auction",
   "start time": "Start time",
   "starting price": "Starting price",
   "starts": "starts",
@@ -161,6 +190,7 @@
     "bear": "BE@RBRICK",
     "chinese": "Chinese Charactor"
   },
+  "target address": "Target Address",
   "template": "Template",
   "time": "Time",
   "time locale": "en-US",
@@ -187,31 +217,7 @@
   },
   "withdraw": "Withdraw",
   "withdrawed": "Withdrawed",
-  "cancel_auction_tip": "You can't cancel auction once it's started.",
   "you will receive": "You will receive",
   "your bid": "Your bid",
-  "your last bid": "Your last bid",
-  "Andromeda": "Andromeda",
-  "english auction": "English Auction",
-  "dutch auction": "Dutch Auction",
-  "approve": "Approve",
-  "start dutch auction": "Start Dutch Auction",
-  "start english auction": "Start English Auction",
-  "bid price history": "Bid Price History",
-  "event_ask": "Ask",
-  "event_bid": "Bid",
-  "event_burn": "Burn",
-  "event_cancel": "Cancel",
-  "event_offer": "Offer",
-  "event_minted": "Minted",
-  "event_sale": "Sale",
-  "event_transfer": "Transfer",
-  "auction_ends_in": "Auction ends in",
-  "floor price": "Floor Price",
-  "designated sale": "Designated Sale",
-  "target address": "Target Address",
-  "operation fee": "Operation Fee",
-  "approve_NewMall_for_sale": "Approve NewMall For Sale",
-  "approving": "approving...",
-  "can claim": "Can Claim"
+  "your last bid": "Your last bid"
 }
