--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,18 +1,20 @@
 {
   ": ": "：",
-  "Auction": "拍卖",
-  "FixedPrice": "定价",
-  "SaleMode": "销售模式",
   "about": "关于",
   "action": "操作",
   "all": "全部",
+  "approve": "授权",
+  "approve_NewMall_for_sale": "授权给NewMall销售",
+  "approving": "授权中...",
   "auction": "拍卖",
+  "Auction": "拍卖",
   "auction canceled": "拍卖已取消",
   "auction ended": "拍卖已结束",
   "auction ends in": "距拍卖结束",
   "auction is over": "拍卖已结束",
   "auction pending": "拍卖未开始",
   "auction starts in": "距拍卖开始",
+  "auction_ends_in": "拍卖结束时间",
   "auctions": "拍卖",
   "banners": {
     "h1": "NewMall.io NFT 商城 NewChain 测试网",
@@ -20,6 +22,7 @@
   },
   "basic description": "NFT 基本信息。所有项目均为必填项。",
   "basic info": "基本信息",
+  "bid price history": "竞价历史",
   "bidding history": "竞价历史",
   "bids": "出价",
   "blocks": "区块",
@@ -27,9 +30,11 @@
   "buy now": "立即购买",
   "buy now description": "购买此物品",
   "buy now descritpion": "购买此物品",
+  "can claim": "可领取",
   "cancel": "取消",
   "cancel auction": "取消拍卖",
   "cancel auction description": "取消此物品的拍卖？",
+  "cancel_auction_tip": "拍卖一旦开始就不能取消。",
   "canceled": "已取消",
   "change to auction": "变更为拍卖",
   "change to sale": "变更为销售",
@@ -50,13 +55,26 @@
   "deal transaction": "成交交易",
   "default contract description": "此 NFT 将使用 NewMall 通用合约创建，该合约为 NRC-7。",
   "description": "描述",
+  "designated sale": "指定买家购买",
+  "dutch auction": "荷兰拍卖",
   "end time": "结束时间",
   "ended": "已结束",
   "ended on s1": "{{s1}}",
   "ends": "结束",
   "ends in s1": "{{s1}}结束",
+  "english auction": "英式拍卖",
+  "event_ask": "挂单售卖",
+  "event_bid": "拍卖出价",
+  "event_burn": "销毁",
+  "event_cancel": "取消售卖/拍卖",
+  "event_minted": "创建",
+  "event_offer": "主动出价",
+  "event_sale": "成交",
+  "event_transfer": "转移",
   "filter": "筛选",
   "fixed price sale": "销售（固定价格）",
+  "FixedPrice": "定价",
+  "floor price": "地板价",
   "for bidding price": "当出价价格为",
   "for description": "为这个NFT写描述。",
   "for royalty receiving address": "设置接收版权费的地址。设置后不能改变。",
@@ -70,10 +88,16 @@
   "highest bid": "最高出价",
   "highest price": "最高价",
   "home": "首页",
+  "home page": {
+    "browse market": "浏览市场",
+    "feature title": "推荐：Newton Collections",
+    "hero desc": "开始在 NewMall 市场中自由的交易 NFT 吧",
+    "hero title": "创建并销售 NFT"
+  },
   "hot": "热门",
   "in auction": "拍卖中",
-  "include royalty fee": "包含版权费",
   "include protocol fee": "包含协议费",
+  "include royalty fee": "包含版权费",
   "input a valid address": "输入有效地址",
   "invalid bid amount": "无效的出价数额",
   "invalid end time": "无效的结束时间",
@@ -113,6 +137,7 @@
   "no records": "无记录",
   "not for sale": "不可购买",
   "oldest created": "最久创建",
+  "operation fee": "运营费",
   "order by": "排序",
   "owner": "持有者",
   "page title": {
@@ -129,6 +154,7 @@
   "pending withdrawal": "待提取竞拍金额",
   "price": "价格",
   "price history": "价格历史",
+  "protocol fee": "协议费",
   "put off sale": "取消销售",
   "put off sale description": "停止销售此物品？",
   "put on sale": "设置销售",
@@ -151,8 +177,10 @@
   "royalty receiving address": "版权费接收地址",
   "s1 bids": "{{s1}} 个出价",
   "s1 buys": "{{s1}} 次购买",
+  "SaleMode": "销售模式",
   "seller will receive": "卖家将收到",
-  "protocol fee": "协议费",
+  "start dutch auction": "开启荷兰拍卖",
+  "start english auction": "开启英式拍卖",
   "start time": "开始时间",
   "starting price": "起拍价格",
   "starts": "开始",
@@ -162,6 +190,7 @@
     "bear": "积木熊（BE@RBRICK）",
     "chinese": "中国汉字"
   },
+  "target address": "指定买家地址",
   "template": "模版",
   "time": "时间",
   "time locale": "zh-CN",
@@ -188,30 +217,7 @@
   },
   "withdraw": "提取竞拍金额",
   "withdrawed": "已提取",
-  "cancel_auction_tip": "拍卖一旦开始就不能取消。",
   "you will receive": "你将收到",
   "your bid": "你的出价",
-  "your last bid": "你的最后出价",
-  "english auction": "英式拍卖",
-  "dutch auction": "荷兰拍卖",
-  "approve": "授权",
-  "start dutch auction": "开启荷兰拍卖",
-  "start english auction": "开启英式拍卖",
-  "bid price history": "竞价历史",
-  "event_ask": "挂单售卖",
-  "event_bid": "拍卖出价",
-  "event_burn": "销毁",
-  "event_cancel": "取消售卖/拍卖",
-  "event_offer": "主动出价",
-  "event_minted": "创建",
-  "event_sale": "成交",
-  "event_transfer": "转移",
-  "auction_ends_in": "拍卖结束时间",
-  "floor price": "地板价",
-  "designated sale": "指定买家购买",
-  "target address": "指定买家地址",
-  "operation fee": "运营费",
-  "approve_NewMall_for_sale": "授权给NewMall销售",
-  "approving": "授权中...",
-  "can claim": "可领取"
+  "your last bid": "你的最后出价"
 }
