fix clear nft form

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -223,5 +223,5 @@
   "create success": "Create Success",
   "cat_tx_hash": "View On Explorer",
   "jump_to_mine": "Go to Mine",
-  "create_next": "Create Next NFT"
+  "Create another": "Create Another NFT"
 }
