use RelativeTime in list

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -47,7 +47,7 @@
   "create": "Create",
   "create nft": "Create NFT",
   "create now": "Create Now",
-  "created on": "Created On",
+  "created on": "Created",
   "creator": "Creator",
   "current block": "Current block",
   "current time": "Current time: ",
