--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -223,5 +223,6 @@
   "create success": "Create Success",
   "cat_tx_hash": "View On Explorer",
   "jump_to_mine": "Go to Mine",
-  "Create another": "Create Another NFT"
+  "Create another": "Create Another NFT",
+  "claim_ends_in": "Claim Ends in"
 }
