--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -46,7 +46,7 @@
   "copy address": "Copy Address",
   "cover image": "Cover Image",
   "create": "Create",
-  "Create another": "Create Another NFT",
+  "create_another": "Create Another NFT",
   "create nft": "Create NFT",
   "create now": "Create Now",
   "create success": "Create Success",
