--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -46,7 +46,7 @@
   "copy address": "复制地址",
   "cover image": "封面图片",
   "create": "创建",
-  "Create another": "继续创建",
+  "create_another": "继续创建",
   "create nft": "创建 NFT",
   "create now": "立即创建",
   "create success": "创建成功",
