--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -225,5 +225,7 @@
   "you will receive": "You will receive",
   "your bid": "Your bid",
   "your last bid": "Your last bid",
-  "claim_ends_in": "Claim Ends in"
+  "claim_ends_in": "Claim Ends in",
+  "price_high_to_low": "Price: High to Low",
+  "price_low_to_high": "Price: Low to High"
 }
