--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -225,5 +225,7 @@
   "you will receive": "你将收到",
   "your bid": "你的出价",
   "your last bid": "你的最后出价",
-  "claim_ends_in": "领取截止时间"
+  "claim_ends_in": "领取截止时间",
+  "price_high_to_low": "价格: 从高到低",
+  "price_low_to_high": "价格: 从低到高"
 }
