--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -227,5 +227,6 @@
   "your last bid": "Your last bid",
   "claim_ends_in": "Claim Ends in",
   "price_high_to_low": "Price: High to Low",
-  "price_low_to_high": "Price: Low to High"
+  "price_low_to_high": "Price: Low to High",
+  "on sale": "On Sale"
 }
