--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -227,5 +227,6 @@
   "your last bid": "你的最后出价",
   "claim_ends_in": "领取截止时间",
   "price_high_to_low": "价格: 从高到低",
-  "price_low_to_high": "价格: 从低到高"
+  "price_low_to_high": "价格: 从低到高",
+  "on sale": "销售中"
 }
