fix bug for load more

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -228,5 +228,6 @@
   "claim_ends_in": "Claim Ends in",
   "price_high_to_low": "Price: High to Low",
   "price_low_to_high": "Price: Low to High",
-  "on sale": "On Sale"
+  "on sale": "On Sale",
+  "no data": "No Data"
 }
