--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -228,5 +228,6 @@
   "claim_ends_in": "领取截止时间",
   "price_high_to_low": "价格: 从高到低",
   "price_low_to_high": "价格: 从低到高",
-  "on sale": "销售中"
+  "on sale": "销售中",
+  "no data": "暂无数据"
 }
