--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -229,5 +229,7 @@
   "price_high_to_low": "价格: 从高到低",
   "price_low_to_high": "价格: 从低到高",
   "on sale": "销售中",
-  "no data": "暂无数据"
+  "no data": "暂无数据",
+  "insufficient balance": "余额不足",
+  "claim nft(insufficient balance)": "领取 NFT (余额不足)"
 }
