--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -234,5 +234,6 @@
   "report": "Report",
   "about": "About",
   "My Account": "My Account",
-  "Marketplace": "MarketPlace"
+  "Marketplace": "MarketPlace",
+  "download resource": "Download Resource"
 }
