--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -235,5 +235,6 @@
   "about": "About",
   "My Account": "My Account",
   "Marketplace": "MarketPlace",
-  "download resource": "Download Resource"
+  "download resource": "Download Resource",
+  "Activity": "Activity"
 }
