--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -235,5 +235,6 @@
   "report": "举报侵权",
   "My Account": "我的账户",
   "Marketplace": "市场",
-  "download resource": "下载资源"
+  "download resource": "下载资源",
+  "Activity": "动态"
 }
