completed direct sale

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -245,5 +245,6 @@
   "sale time": "Time",
   "sale price": "Price",
   "sell": "Sell",
-  "active": "Active"
+  "active": "Active",
+  "completed": "Completed"
 }
