--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -248,5 +248,7 @@
   "active": "Active",
   "completed": "Completed",
   "Sell Orders": "Sell Orders",
-  "Buy Orders": "Buy Orders"
+  "Buy Orders": "Buy Orders",
+  "Auction Bids": "Auction Bids",
+  "ME": "ME"
 }
