--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -233,13 +233,13 @@
   "insufficient balance": "余额不足",
   "claim nft(insufficient balance)": "领取 NFT (余额不足)",
   "Listing Detail": "售卖信息",
-  "Deal Detail": "交易信息",
-  "numBids": "出价次数",
-  "Duration": "持续时间",
-  "payee": "收款人",
-  "payer": "付款人",
-  "item from": "发货方",
-  "item to": "收货方",
+  "Deal Detail": "成交信息",
+  "numBids": "出价数",
+  "Duration": "时长",
+  "payee": "收款方",
+  "payer": "付款方",
+  "item from": "转移方",
+  "item to": "接收方",
   "tx_time": "交易时间",
   "expired": "领取超时",
   "sale time": "销售时间",
@@ -248,5 +248,8 @@
   "active": "售卖中",
   "completed": "已完成",
   "Sell Orders": "我的售卖",
-  "Buy Orders": "我的购买"
+  "Buy Orders": "我的购买",
+  "Auction Bids": "拍卖竞拍",
+  "ME": "我",
+  "Highest Bid": "最高出价"
 }
