fix bug for sell order filter

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -262,5 +262,6 @@
   "Sells Completed": "销售完成",
   "Canceled": "取消",
   "Completed": "已完成",
-  "Active": "拍卖中"
+  "Active": "拍卖中",
+  "Buy": "购买"
 }
