--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -14,6 +14,7 @@
   "auction ends in": "距拍卖结束",
   "auction is over": "拍卖已结束",
   "auction pending": "拍卖未开始",
+  "Auction Pending": "拍卖待领取",
   "auction starts in": "距拍卖开始",
   "auction_ends_in": "拍卖结束时间",
   "auctions": "拍卖",
