--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,9 @@
 {
   ": ": ": ",
+  "about": "About",
   "action": "Action",
+  "active": "Active",
+  "Activity": "Activity",
   "all": "All",
   "Andromeda": "Andromeda",
   "approve": "Approve",
@@ -8,6 +11,7 @@
   "approving": "approving...",
   "auction": "Auction",
   "Auction": "Auction",
+  "Auction Bids": "Auction Bids",
   "auction canceled": "Auction Canceled",
   "auction ended": "Auction Ended",
   "auction ends in": "Auction ends in",
@@ -29,6 +33,7 @@
   "browse": "Browse",
   "buy now": "Buy Now",
   "buy now description": "Buy this item",
+  "Buy Orders": "Buy Orders",
   "can claim": "Can Claim",
   "cancel": "Cancel",
   "cancel auction": "Cancel Auction",
@@ -39,25 +44,31 @@
   "change to auction": "Change To Auction",
   "change to sale": "Change To Sale",
   "claim nft": "Claim NFT",
+  "claim nft(insufficient balance)": "Claim NFT (Insufficient Balance)",
+  "claim_ends_in": "Claim Ends in",
   "complete auction": "Complete Auction",
+  "completed": "Completed",
   "confirm": "Confirm",
   "copied": "Copied",
   "copy address": "Copy Address",
   "cover image": "Cover Image",
   "create": "Create",
-  "create_another": "Create Another NFT",
   "create nft": "Create NFT",
   "create now": "Create Now",
   "create success": "Create Success",
+  "create_another": "Create Another NFT",
   "created on": "Created",
   "creator": "Creator",
   "current block": "Current block",
   "current time": "Current time: ",
+  "Deal Detail": "Deal Detail",
   "deal price": "Deal Price",
   "deal transaction": "Deal Transaction",
   "default contract description": "This item will be created to NewMall Collection. This collection uses NRC-7.",
   "description": "Description",
   "designated sale": "Designated Sale",
+  "download resource": "Download Resource",
+  "Duration": "Duration",
   "dutch auction": "Dutch Auction",
   "end time": "End time",
   "ended": "Ended",
@@ -73,6 +84,7 @@
   "event_offer": "Offer",
   "event_sale": "Sale",
   "event_transfer": "Transfer",
+  "expired": "Expired",
   "filter": "Filter",
   "fixed price sale": "Sale (Fixed Price)",
   "FixedPrice": "Fixed Price",
@@ -101,21 +113,28 @@
   "include protocol fee": "Include protocol fee",
   "include royalty fee": "Include Royalty Fee",
   "input a valid address": "Input a valid address",
+  "insufficient balance": "Insufficient Balance",
   "invalid bid amount": "Invalid Bid Amount",
   "invalid end time": "Invalid End Time",
   "invalid price": "Invalid Price",
   "invalid start price": "Invalid Start Price",
   "invalid start time": "Invalid Start Time",
+  "item from": "Item From",
+  "item to": "Item To",
   "jump_to_mine": "Go to Mine",
   "last bid": "Last Bid",
   "last price": "Last Price",
+  "Listing Detail": "Listing Detail",
   "load more": "Load More",
   "loading": "Loading",
   "lowest price": "Lowest Price",
   "make bid": "Make bid",
   "make bid description": "You are about make bid to",
+  "Marketplace": "MarketPlace",
+  "ME": "ME",
   "mine": "Mine",
   "mobile app": "Mobile App",
+  "My Account": "My Account",
   "my auction bids": "My Auction Bids",
   "my auctions": "My Auctions",
   "my bid": "My bid",
@@ -137,9 +156,12 @@
     "redeemable description": "Newton Redeemable NFT with feature to redeem in the future."
   },
   "no auction yet": "No auction yet",
+  "no data": "No Data",
   "no records": "No Records",
   "not for sale": "Not for sale",
+  "numBids": "No. Bids",
   "oldest created": "Oldest Created",
+  "on sale": "On Sale",
   "operation fee": "Operation Fee",
   "order by": "Order By",
   "owner": "Owner",
@@ -150,6 +172,8 @@
     "mine": "My NFTs"
   },
   "paid": "Paid",
+  "payee": "Payee",
+  "payer": "Payer",
   "payment due": "Payment Due",
   "payment total": "Payment Total",
   "pending claim": "Pending Claim",
@@ -157,6 +181,8 @@
   "pending withdrawal": "Pending Withdrawal",
   "price": "Price",
   "price history": "Price History",
+  "price_high_to_low": "Price: High to Low",
+  "price_low_to_high": "Price: Low to High",
   "protocol fee": "protocol fee",
   "put off sale": "Put Off Sale",
   "put off sale description": "Stop selling this item?",
@@ -172,6 +198,7 @@
     "redeemable+redeemed": "Redeemable (Redeemed)"
   },
   "refresh": "Refresh",
+  "report": "Report",
   "round": "Round",
   "royalty": "Royalty",
   "royalty description": "Set royalty rate for this NFT. You will receive the royalty after every buy or auction on NewMall. Once set, it cannot be changed.",
@@ -180,7 +207,11 @@
   "royalty receiving address": "Royalty Receiving Address",
   "s1 bids": "{{s1}} bids",
   "s1 buys": "{{s1}} buys",
+  "sale price": "Price",
+  "sale time": "Time",
   "SaleMode": "Sale Mode",
+  "sell": "Sell",
+  "Sell Orders": "Sell Orders",
   "seller will receive": "Seller will receive",
   "start dutch auction": "Start Dutch Auction",
   "start english auction": "Start English Auction",
@@ -197,6 +228,10 @@
   "template": "Template",
   "time": "Time",
   "time locale": "en-US",
+  "time_d": "d",
+  "time_h": "h",
+  "time_m": "m",
+  "time_s": "s",
   "top bid": "Top bid",
   "transactor": {
     "local transaction sent": "Local Transaction Sent",
@@ -204,6 +239,7 @@
   },
   "transfer": "Transfer",
   "transfer to": "Transfer To",
+  "tx_time": "Txn Time",
   "up to": "up to ",
   "upload a file": "Upload a file",
   "view in blockchain explorer": "View In Blockchain Explorer",
@@ -223,41 +259,5 @@
   "withdrawed": "Withdrawed",
   "you will receive": "You will receive",
   "your bid": "Your bid",
-  "your last bid": "Your last bid",
-  "claim_ends_in": "Claim Ends in",
-  "price_high_to_low": "Price: High to Low",
-  "price_low_to_high": "Price: Low to High",
-  "on sale": "On Sale",
-  "no data": "No Data",
-  "insufficient balance": "Insufficient Balance",
-  "claim nft(insufficient balance)": "Claim NFT (Insufficient Balance)",
-  "Listing Detail": "Listing Detail",
-  "Deal Detail": "Deal Detail",
-  "numBids": "No. Bids",
-  "Duration": "Duration",
-  "payee": "Payee",
-  "payer": "Payer",
-  "item from": "Item From",
-  "item to": "Item To",
-  "tx_time": "Txn Time",
-  "expired": "Expired",
-  "sale time": "Time",
-  "sale price": "Price",
-  "sell": "Sell",
-  "active": "Active",
-  "completed": "Completed",
-  "Sell Orders": "Sell Orders",
-  "Buy Orders": "Buy Orders",
-  "Auction Bids": "Auction Bids",
-  "ME": "ME",
-  "time_d": "d",
-  "time_h": "h",
-  "time_m": "m",
-  "time_s": "s",
-  "report": "Report",
-  "about": "About",
-  "My Account": "My Account",
-  "Marketplace": "MarketPlace",
-  "download resource": "Download Resource",
-  "Activity": "Activity"
+  "your last bid": "Your last bid"
 }
