--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -2,6 +2,10 @@
   ": ": "：",
   "about": "关于",
   "action": "操作",
+  "Action Required": "需要操作",
+  "active": "售卖中",
+  "Active": "售卖中",
+  "Activity": "动态",
   "all": "全部",
   "All": "全部",
   "approve": "授权",
@@ -9,15 +13,24 @@
   "approving": "授权中...",
   "auction": "拍卖",
   "Auction": "拍卖",
+  "Auction Bids": "竞拍",
   "auction canceled": "拍卖已取消",
+  "Auction Canceled": "拍卖：已取消",
+  "Auction Completed": "拍卖：已完成",
   "auction ended": "拍卖已结束",
+  "Auction Ended": "拍卖结束",
+  "Auction Ended(Claim Expired)": "拍卖：已结束(领取超时)",
+  "Auction Ended(No Bids)": "拍卖：已结束(无人出价)",
+  "Auction Ended(Pending Claim)": "拍卖：已结束(待领取)",
   "auction ends in": "距拍卖结束",
   "auction is over": "拍卖已结束",
   "auction pending": "拍卖未开始",
   "Auction Pending": "拍卖待领取",
+  "Auction Pending Claim": "竞拍：待领取",
   "auction starts in": "距拍卖开始",
   "auction_ends_in": "拍卖结束时间",
   "auctions": "拍卖",
+  "Auctions": "拍卖",
   "banners": {
     "h1": "NewMall.io NFT 商城 NewChain 测试网",
     "t1": "了解更多"
@@ -28,39 +41,51 @@
   "bidding history": "竞价历史",
   "bids": "出价",
   "blocks": "区块",
+  "Bought": "已购买",
   "browse": "浏览",
+  "Buy": "购买",
   "buy now": "立即购买",
   "buy now description": "购买此物品",
   "buy now descritpion": "购买此物品",
+  "Buy Orders": "我的购买",
+  "Buys": "购买",
   "can claim": "可领取",
   "cancel": "取消",
   "cancel auction": "取消拍卖",
   "cancel auction description": "取消此物品的拍卖？",
   "cancel_auction_tip": "拍卖一旦开始就不能取消。",
   "canceled": "已取消",
+  "Canceled": "取消",
   "cat_tx_hash": "前往浏览器查看创建信息",
   "change to auction": "变更为拍卖",
   "change to sale": "变更为销售",
   "claim nft": "领取 NFT",
+  "claim nft(insufficient balance)": "领取 NFT (余额不足)",
+  "claim_ends_in": "领取截止时间",
   "complete auction": "完成拍卖",
+  "completed": "已完成",
+  "Completed": "已完成",
   "confirm": "确认",
   "copied": "已复制",
   "copy address": "复制地址",
   "cover image": "封面图片",
   "create": "创建",
-  "create_another": "继续创建",
   "create nft": "创建 NFT",
   "create now": "立即创建",
   "create success": "创建成功",
+  "create_another": "继续创建",
   "created on": "创建于",
   "creator": "作者",
   "current block": "当前区块",
   "current time": "当前时间：",
+  "Deal Detail": "成交信息",
   "deal price": "成交价",
   "deal transaction": "成交交易",
   "default contract description": "此 NFT 将使用 NewMall 通用合约创建，该合约为 NRC-7。",
   "description": "描述",
   "designated sale": "指定买家购买",
+  "download resource": "下载资源",
+  "Duration": "时长",
   "dutch auction": "荷兰拍卖",
   "end time": "结束时间",
   "ended": "已结束",
@@ -76,6 +101,7 @@
   "event_offer": "主动出价",
   "event_sale": "成交",
   "event_transfer": "转移",
+  "expired": "领取超时",
   "filter": "筛选",
   "fixed price sale": "销售（固定价格）",
   "FixedPrice": "定价",
@@ -91,6 +117,7 @@
     "slogan": "领先的 NFT 市场"
   },
   "highest bid": "最高出价",
+  "Highest Bid": "最高出价",
   "highest price": "最高价",
   "home": "首页",
   "home page": {
@@ -101,24 +128,32 @@
   },
   "hot": "热门",
   "in auction": "拍卖中",
+  "In Auction": "拍卖中",
   "include protocol fee": "包含协议费",
   "include royalty fee": "包含版权费",
   "input a valid address": "输入有效地址",
+  "insufficient balance": "余额不足",
   "invalid bid amount": "无效的出价数额",
   "invalid end time": "无效的结束时间",
   "invalid price": "无效的价格",
   "invalid start price": "无效的起拍价格",
   "invalid start time": "无效的开始时间",
+  "item from": "转移方",
+  "item to": "接收方",
   "jump_to_mine": "前往我的 NFT 查看",
   "last bid": "最后价格",
   "last price": "最后价格",
+  "Listing Detail": "售卖信息",
   "load more": "加载更多",
   "loading": "加载中",
   "lowest price": "最低价",
   "make bid": "出价竞拍",
   "make bid description": "你将出价竞拍",
+  "Marketplace": "市场",
+  "ME": "我",
   "mine": "我的",
   "mobile app": "移动 App",
+  "My Account": "我的账户",
   "my auction bids": "我的竞拍",
   "my auctions": "我的拍卖",
   "my bid": "我的出价",
@@ -140,9 +175,13 @@
     "redeemable description": "牛顿可兑换 NFT 支持兑换功能。"
   },
   "no auction yet": "还没有拍卖",
+  "no data": "暂无数据",
   "no records": "无记录",
   "not for sale": "不可购买",
+  "numBids": "出价数",
   "oldest created": "最久创建",
+  "on sale": "销售中",
+  "On Sale": "售卖中",
   "operation fee": "运营费",
   "order by": "排序",
   "owner": "持有者",
@@ -153,6 +192,8 @@
     "mine": "我的 NFT"
   },
   "paid": "已付",
+  "payee": "收款方",
+  "payer": "付款方",
   "payment due": "仍需支付",
   "payment total": "支付总额",
   "pending claim": "待领取",
@@ -160,6 +201,8 @@
   "pending withdrawal": "待提取竞拍金额",
   "price": "价格",
   "price history": "价格历史",
+  "price_high_to_low": "价格: 从高到低",
+  "price_low_to_high": "价格: 从低到高",
   "protocol fee": "协议费",
   "put off sale": "取消销售",
   "put off sale description": "停止销售此物品？",
@@ -175,6 +218,7 @@
     "redeemable+redeemed": "可兑换（状态：已兑换）"
   },
   "refresh": "刷新",
+  "report": "举报侵权",
   "round": "轮次",
   "royalty": "版权费",
   "royalty description": "为该NFT设置版税率。您将在NewMall上每次购买或拍卖后收到版税。一旦设置，就不能改变。",
@@ -183,8 +227,16 @@
   "royalty receiving address": "版权费接收地址",
   "s1 bids": "{{s1}} 个出价",
   "s1 buys": "{{s1}} 次购买",
+  "Sale Canceled": "售卖：已取消",
+  "Sale Completed": "售卖：已完成",
+  "sale price": "销售价格",
+  "sale time": "销售时间",
   "SaleMode": "销售模式",
+  "sell": "售卖",
+  "Sell Orders": "我的售卖",
   "seller will receive": "卖家将收到",
+  "Sells": "出售",
+  "Sells Completed": "销售完成",
   "start dutch auction": "开启荷兰拍卖",
   "start english auction": "开启英式拍卖",
   "start time": "开始时间",
@@ -200,6 +252,10 @@
   "template": "模版",
   "time": "时间",
   "time locale": "zh-CN",
+  "time_d": "天",
+  "time_h": "时",
+  "time_m": "分",
+  "time_s": "秒",
   "top bid": "最高出价",
   "transactor": {
     "local transaction sent": "交易已发送",
@@ -207,6 +263,7 @@
   },
   "transfer": "发送",
   "transfer to": "发送至",
+  "tx_time": "交易时间",
   "up to": "最大",
   "upload a file": "上传文件",
   "view in blockchain explorer": "在区块链浏览器中查看",
@@ -226,62 +283,5 @@
   "withdrawed": "已提取",
   "you will receive": "你将收到",
   "your bid": "你的出价",
-  "your last bid": "你的最后出价",
-  "claim_ends_in": "领取截止时间",
-  "price_high_to_low": "价格: 从高到低",
-  "price_low_to_high": "价格: 从低到高",
-  "on sale": "销售中",
-  "no data": "暂无数据",
-  "insufficient balance": "余额不足",
-  "claim nft(insufficient balance)": "领取 NFT (余额不足)",
-  "Listing Detail": "售卖信息",
-  "Deal Detail": "成交信息",
-  "numBids": "出价数",
-  "Duration": "时长",
-  "payee": "收款方",
-  "payer": "付款方",
-  "item from": "转移方",
-  "item to": "接收方",
-  "tx_time": "交易时间",
-  "expired": "领取超时",
-  "sale time": "销售时间",
-  "sale price": "销售价格",
-  "sell": "售卖",
-  "active": "售卖中",
-  "completed": "已完成",
-  "Sell Orders": "我的售卖",
-  "Buy Orders": "我的购买",
-  "Auction Bids": "竞拍",
-  "ME": "我",
-  "Highest Bid": "最高出价",
-  "Action Required": "需要操作",
-  "Buys": "购买",
-  "Auction Ended": "拍卖结束",
-  "Sells": "出售",
-  "Auctions": "拍卖",
-  "Sells Completed": "销售完成",
-  "Canceled": "取消",
-  "Completed": "已完成",
-  "Active": "售卖中",
-  "Buy": "购买",
-  "On Sale": "售卖中",
-  "Sale Completed": "售卖：已完成",
-  "Sale Canceled": "售卖：已取消",
-  "In Auction": "拍卖中",
-  "Auction Completed": "拍卖：已完成",
-  "Auction Canceled": "拍卖：已取消",
-  "Auction Ended(No Bids)": "拍卖：已结束(无人出价)",
-  "Auction Ended(Pending Claim)": "拍卖：已结束(待领取)",
-  "Auction Ended(Claim Expired)": "拍卖：已结束(领取超时)",
-  "Bought": "已购买",
-  "Auction Pending Claim": "竞拍：待领取",
-  "time_d": "天",
-  "time_h": "时",
-  "time_m": "分",
-  "time_s": "秒",
-  "report": "举报侵权",
-  "My Account": "我的账户",
-  "Marketplace": "市场",
-  "download resource": "下载资源",
-  "Activity": "动态"
+  "your last bid": "你的最后出价"
 }
