add orders to menu

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,6 +34,7 @@
   "buy now": "Buy Now",
   "buy now description": "Buy this item",
   "Buy Orders": "Buy Orders",
+  "buys": "Buys",
   "can claim": "Can Claim",
   "cancel": "Cancel",
   "cancel auction": "Cancel Auction",
@@ -213,6 +214,7 @@
   "sell": "Sell",
   "Sell Orders": "Sell Orders",
   "seller will receive": "Seller will receive",
+  "sells": "Sells",
   "start dutch auction": "Start Dutch Auction",
   "start english auction": "Start English Auction",
   "start time": "Start time",
