--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -48,6 +48,7 @@
   "buy now description": "购买此物品",
   "buy now descritpion": "购买此物品",
   "Buy Orders": "我的购买",
+  "buys": "购买",
   "Buys": "购买",
   "can claim": "可领取",
   "cancel": "取消",
@@ -235,6 +236,7 @@
   "sell": "售卖",
   "Sell Orders": "我的售卖",
   "seller will receive": "卖家将收到",
+  "sells": "售卖",
   "Sells": "出售",
   "Sells Completed": "销售完成",
   "start dutch auction": "开启荷兰拍卖",
