--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -261,5 +261,7 @@
   "withdrawed": "Withdrawed",
   "you will receive": "You will receive",
   "your bid": "Your bid",
-  "your last bid": "Your last bid"
+  "your last bid": "Your last bid",
+  "sale mode filter": "Sale Mode Filter",
+  "collection filter": "Collection Filter"
 }
