--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -285,5 +285,7 @@
   "withdrawed": "已提取",
   "you will receive": "你将收到",
   "your bid": "你的出价",
-  "your last bid": "你的最后出价"
+  "your last bid": "你的最后出价",
+  "sale mode filter": "售卖方式筛选",
+  "collection filter": "藏品筛选"
 }
